# pysourceinfo

./: .gitignore  LICENSE.txt  MANIFEST.in  README  README.md  RELEASE-INFO.sh  callDocEpydoc.sh  callDocSphinx.sh  install_doc.sh  licenses-amendments.txt  setenv.sh  setup.cfg  setup.py
UseCases/: CallCase.py  README.md  __init__.py
UseCases/PySourceInfo/getCallerFileName/: CallCase.py
UseCases/PySourceInfo/getCallerFilePathName/: CallCase.py
UseCases/PySourceInfo/getCallerFuncName/: CallCase.py
UseCases/PySourceInfo/getCallerLinenumber/: CallCase.py
UseCases/PySourceInfo/getCallerModuleFilePathName/: CallCase.py
UseCases/PySourceInfo/getCallerModuleName/: CallCase.py
UseCases/PySourceInfo/getCallerModulePathName/: CallCase.py
UseCases/PySourceInfo/getCallerModulePythonPath/: CallCase.py
UseCases/PySourceInfo/getCallerName/: CallCase.py
UseCases/PySourceInfo/getCallerNameOID/: CallCase.py
UseCases/PySourceInfo/getCallerNamespaceGlobal/: CallCase.py
UseCases/PySourceInfo/getCallerNamespaceLocal/: CallCase.py
UseCases/PySourceInfo/getCallerPackageFilePathName/: CallCase.py
UseCases/PySourceInfo/getCallerPackageName/: CallCase.py
UseCases/PySourceInfo/getCallerPackagePathName/: CallCase.py
UseCases/PySourceInfo/getCallerPackagePythonPath/: CallCase.py
UseCases/PySourceInfo/getCallerPathName/: CallCase.py
UseCases/PySourceInfo/getCallerSysPathPackageName/: CallCase.py
UseCases/PySourceInfo/getCallerSysPathPackageSysPathName/: CallCase.py
UseCases/PySourceInfo/getPythonPathFromSysPath/: CallCase.py
UseCases/PySourceInfo/getPythonPathRel/: CallCase.py
UseCases/PySourceInfo/getStackSposForFuncName/: CallCase.py
UseCases/PySourceInfo/getcaller_filepathname/: CallCase.py
UseCases/PySourceInfo/getcaller_name/: CallCase.py
UseCases/PySourceInfo/getcaller_package_name/: CallCase.py
UseCases/PySourceInfo/getpythonpath_rel/: CallCase.py
UseCases/fileinfo/: fileinfo_check_usecases.py
UseCases/fileinfo/getcaller_filename/: CallCase.py
UseCases/fileinfo/getcaller_filepathname/: CallCase.py
UseCases/fileinfo/getcaller_linenumber/: CallCase.py
UseCases/fileinfo/getcaller_package_filepathname/: CallCase.py
UseCases/fileinfo/getcaller_package_pathname/: CallCase.py
UseCases/fileinfo/getcaller_pathname/: CallCase.py
UseCases/fileinfo/getcaller_python_pathname/: CallCase.py
UseCases/objectinfo/getcaller_module_name/: CallCase.py
UseCases/objectinfo/getcaller_package_name/: CallCase.py
doc/en/sourceinfo/: MITLicense.html  ModifiedArtisticLicense20.html  allareobjects.html  genindex.html  index.html  index_modules.html  index_part_abstract.html  index_part_apiref_scaled.html  index_part_blueprint.html  index_part_cockpit.html  index_part_documents.html  index_part_indices.html  index_part_license.html  index_part_platform_support.html  index_part_resources.html  install.html  namebinding.html  objects.inv  project.html  py-modindex.html  references.html  runtimepackages.html  search.html  searchindex.js  sourceinfo.bininfo.html  sourceinfo.fileinfo.html  sourceinfo.helper.html  sourceinfo.html  sourceinfo.infolists.html  sourceinfo.objectinfo.html  sourceinfo_doc.html
doc/en/sourceinfo/_modules/: index.html
doc/en/sourceinfo/_sources/: allareobjects.rst.txt  index_part_abstract.rst.txt  index_part_apiref_scaled.rst.txt  index_part_cockpit.rst.txt  index_part_indices.rst.txt  index_part_license.rst.txt  index_part_resources.rst.txt  install.rst.txt  project.rst.txt  references.rst.txt  runtimepackages.rst.txt  sourceinfo.fileinfo.rst.txt  sourceinfo.infolists.rst.txt  sourceinfo.objectinfo.rst.txt
doc/en/sourceinfo/_static/: custom.css
doc/en/sourceinfo/apiref/: api-objects.txt  epydoc.js  frames-right.html  help.html  identifier-index.html  index.html  licenses-amendments.txt  module-tree.html  redirect.html  sourceinfo-module.html  sourceinfo-pysrc.html  sourceinfo.bininfo-module.html  sourceinfo.bininfo-pysrc.html  sourceinfo.fileinfo-module.html  sourceinfo.fileinfo-pysrc.html  sourceinfo.helper-module.html  sourceinfo.helper-pysrc.html  sourceinfo.infolists-module.html  sourceinfo.infolists-pysrc.html  sourceinfo.objectinfo-module.html  sourceinfo.objectinfo-pysrc.html  toc-everything.html  toc-sourceinfo-module.html  toc-sourceinfo.bininfo-module.html  toc-sourceinfo.fileinfo-module.html  toc-sourceinfo.helper-module.html  toc-sourceinfo.infolists-module.html  toc-sourceinfo.objectinfo-module.html  toc.html
doc/en/sourceinfo/faq/: index.html
doc/en/sourceinfo/help/: index.html  (+1 more)
docsrc/: MITLicense.rst  ModifiedArtisticLicense20.rst  epydoc-pysourceinfo.css  epydoc-standalone.conf  epydoc.conf  fileinfo.rst  helper.rst  index.rst  index_modules.rst  index_part_blueprint.rst  index_part_documents.rst  index_part_platform_support.rst  namebinding.rst  pysourceinfo.rst  shortcuts.rst  sourceinfo.bininfo.rst  sourceinfo.helper.rst  sourceinfo.rst  sourceinfo_doc.rst
docsrc/help/: WindowsImportIssues.rst
docsrc/howto/: GetCallerSourceLineNumber.rst  GetModuleOID.rst  ObjectAccessviaNameBinding.rst
docsrc/images/: layers-blueprint.VSD  layers-modules.vsd  layers-with-pystackinfo-blueprint.vsd  layers-with-pystackinfo.vsd  name-binding-bin-pep3147.vsd  name-binding-bin.vsd  name-binding.vsd  ~$$layers-modules.~vsd  ~$$layers-with-pystackinfo-blueprint.~vsd  ~$$layers-with-pystackinfo.~vsd  ~$$name-binding-bin.~vsd  ~$$name-binding.~vsd
pysourceinfo/: PySourceInfo.py  __init__.py  bininfo.py  fileinfo.py  helper.py  infolists.py  objectinfo.py
sourceinfo/: __init__.py  bininfo.py  fileinfo.py  helper.py  infolists.py  objectinfo.py
testdata/: __init__.py
testdata/a/: __init__.py
testdata/moduletypes/python3/: __init__.py
testdata/pysourceinfo/: __init__.py
testdata/pysourceinfo/a/: __init__.py
testdata/pysourceinfo/moduletypes/: __init__.py
tests/: .gitignore  CallCase.py  README.md  __init__.py
tests/30_libs/: __init__.py
tests/30_libs/090_helper/: __init__.py
tests/dummymodules/: Dummy0.py  Dummy1.py
tests/pysourceinfo/: CallCase.py  __init__.py
tests/pysourceinfo/libs/: __init__.py
(+479 files in other folders)
