#
# AUTHOR:         Arno-Can Uestuensoez
# AUTHOR-EMAIL:   acue_sf2@sourceforge.net
# LICENSE:        Artistic-License-2.0 + Forced-Fairplay-Constraints
# COPYRIGHT:      Copyright (C) 2015-2019 Arno-Can Uestuensoez @Ingenieurbuero Arno-Can Uestuensoez
# UUID:           efed42d3-f801-4fbb-abfd-bd598d683a82
#


[build_docx]
#
# the static configuration options, these serve as defaults when the corresponding
# command line option is present 
#

# activates --apiref  
# apiref = 


# default: search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apidoc.sh
# build-apidoc =  


# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apiref.sh
# build_apiref = 


# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_doc.sh
# build_doc = 


# root of the build directory
# build_dir = build/


# cleans old output
# clean = False


# configuration directory
# conf_dir = <docsource>/conf/


# attribute of derived class <<self.name>>
# docname = sourceinfo


# document source
# docsource = docsrc/


# created document type
# see --help-doctypes
# doctype = html


# top index file to be used as replacement for the document
# indexsrc = docsrc/index.rst


# attribute of derived class <<self.name>>
# name = sourceinfo


# <year>.<month>.<day>
# release = test-release 


# path list of source directories to be processed by call_apidoc.sh and call_apiref.sh
# the syntax is a semicolon separated list, e.g.:
#
#   srcdir = sourceinfo;bin
#
# srcdir = sourceinfo;bin;utilities


# the document version
# version=  



[build_apidoc]
#
# the static configuration options, these serve as defaults when the corresponding
# command line option is present 
#

# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apidoc.sh
# build_apidoc = 


# root of the build directory
# build_dir = build/


# cleans old output
# clean = False


# configuration directory
# conf_dir = <docsource>/conf/


# attribute of derived class <<self.name>>
# docname = sourceinfo


# document source
# docsource = docsrc/


# created document type
# see --help-doctypes
# doctype = html


# attribute of derived class <<self.name>>
# name = sourceinfo


# <year>.<month>.<day>
# release = test-release 


# path list of source directories to be processed by call_apidoc.sh and call_apiref.sh
# the syntax is a semicolon separated list, e.g.:
#
#   srcdir = sourceinfo;bin
#
# srcdir = sourceinfo;bin;utilities


# the document version
# version=  



[build_apiref]
#
# the static configuration options, these serve as defaults when the corresponding
# command line option is present 
#

# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apiref.sh
# build_apiref = 


# root of the build directory
# build_dir = build/


# cleans old output
# clean = False


# configuration directory
# conf_dir = <docsource>/conf/


# attribute of derived class <<self.name>>
# docname = sourceinfo


# document source
# docsource = docsrc/


# created document type
# see --help-doctypes
# doctype = html


# attribute of derived class <<self.name>>
# name = sourceinfo


# <year>.<month>.<day>
# release = test-release 


# path list of source directories to be processed by call_apidoc.sh and call_apiref.sh
# the syntax is a semicolon separated list, e.g.:
#
#   srcdir = sourceinfo;bin
#
# srcdir = sourceinfo;bin;utilities


# the document version
# version=  



[install_docx]
#
# installs form a directory - by default 
#

# package name, changes <<self.name>> of the instance of install_docx
# resulting in the created document <build-dir>/apidoc/<name-or-docname>
# name = <<self.name>>


# installation source tree
# build-dir = build/


# document name, could be different from --name,
# used as the input and the output name of the document
# resulting in the created document <build-dir>/apidoc/<name-or-docname>
# docname = <self.name> 


# installation target directory, PEP-370, user data directory
# dist-dir = /user/data/ + doc/en/html/man3


# document type to install
# see --help-doctypes
# doctype = html 


# print only, do not execute
# no-exec = 0


# debug flag, higher numbers raise level
# debug = 0


# verbose flag, higher numbers raise level
# verbose = 0


[dist_docx]

# append files to existing archive, default: create new
# can be used to add new unpack-dir
# append = 


# document source location
# build-dir = build/


# debug flag
# debug = 0


# document type to pack
# see --help-doctypes
# doctype = html


# type of the created package
# see --help-formats
# format = zip


# changes package name
# name = <self.name>


# input package name
# name-in = <self.name>


# output package name
# name-out = <self.name>


# sets version of created archive, else date
# set-version = <year>.<month>.<day>


# archive location for creation
# dist-dir = dist/


#
# name of prefix directory to unpack to, also archive prefix,
# relative subdirectories only,
#
#   self.release = <self.name>-doc-<self.doctype>-<self.version>
#
# for example sourceinfo-doc-html-20190501
#
# unpack-dir = self.release



[metadata]
#
# some minor static metadata are located here, while the main metada remains in 'setup.py', 
# in particular the combined and dynamic evaluated parameters 
#

# maintainer
maintainer = acue


# maintainer email
maintainer_email = acue_sf2@sourceforge.net


# urls
project_urls = 
	home = https://sourceforge.net/projects/sourceinfo"
	documents = https://sourceinfo.sourceforge.io/
	runtimerepo = https://pypi.org/project/sourceinfo/
    downloads = https://pypi.org/project/sourceinfo/
    downloads1 = https://sourceforge.net/projects/sourceinfo/
    source = https://github.com/ArnoCan/sourceinfo/
    source1 = https://sourceforge.net/projects/sourceinfo/
    source2 = https://bitbucket.org/acue/sourceinfo/
    tracker = https://github.com/ArnoCan/sourceinfo/issues


# the classification of this package
classifiers = 
	Framework :: Setuptools Plugin
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Free To Use But Restricted
    License :: OSI Approved :: Artistic License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Other OS
    Operating System :: POSIX
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Other
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Java
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Home Automation
    Topic :: Internet
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: pygame
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: Testing
    Topic :: System :: Distributed Computing
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Networking
    Topic :: System :: Operating System
    Topic :: System :: Shells
    Topic :: System :: Software Distribution
    Topic :: System :: System Shells
    Topic :: System :: Systems Administration
    Topic :: Utilities


# keywords
keywords = ARM
	GhostBSD
	LinuxMint
	Manjaro
	TrueOS
    Aix
    Alpine
    AlpineLinux
    Arch
    ArchLinux
    ArchLinuxARM
    Armbian
    BSD
    BlackArch
    BlackArchLinux
    CPython
    CentOS
    Cygwin
    Darwin
    Debian
    Distribution
    DragonFlyBSD
    Fedora
    FigureWrap
    FreeBSD
    Gentoo
    HP-UX
    IPython
    ImageWrap
    IronPython
    Java
    Java
    Jython
    Kali
    KaliLinux
    Linux
    MacOS
    Minix
    Minx3
    NetBSD
    OS-X
    OpenBSD
    OpenSUSE
    OpenWRT
    PyPy
    Python2
    Python3
    RHEL
    Raspbian
    ReactOS
    SLES
    Scriptin
    SnowLeopard
    Solaris
    Sphinx
    Sphinx
    SuSE
    SunOS
    SunOS5
    Ubuntu
    Unix
    WSL
    WSL 1.0
    WSL 2.0
    WSL-1.0
    WSL-2.0
    Windows
    Windows10
    Windows2003
    Windows2008
    Windows2010
    Windows2012
    Windows2016
    Windows2019
    Windows2019se
    Windows7
    Windows8
    WindowsXP
    bitarray
    bitmask
    build_apidoc
    build_apiref
    build_docx
    commands
    distutils
    doc
    documentation
    docx
    enumerate
    epydoc
    extension
    hexvalue
    image
    imagewrap
    info
    install_docx
    list
    literalincludewrap
    mkdocs
    pandoc
    pkg_docx
    setup
    setup commands
    setup.py
    sourceinfo
    sourceinfo.dist.Distribution
    setuptools
    show
    sphinx
    sphinx extensions
    sphinx-apidoc
    sphinx-build
    sphinx.ext.imagewrap
    sphinx.ext.literalincludewrap


platforms = Aix
	GhostBSD
	LinuxMint
	Manjaro
	TrueOS
    AlpineLinux
    ArchLinux
    ArchLinuxARM
    Armbian
    BlackArchLinux
    CentOS
    Cygwin
    Darwin
    Debian
    DragonFlyBSD
    FedoraLinux
    FreeBSD
    GentooLinux
    HP-UX
    KaliLinux
    MacOS
    Minix
    Minx3
    NetBSD
    OS-X
    OpenBSD
    OpenSUSE
    OpenWRT
    RHEL
    Raspbian
    ReactOS
    SLES
    Solaris
    SuSE
    SunOS
    SunOS5
    Ubuntu
    Unix
    Windows10
    Windows2003
    Windows2008
    Windows2010
    Windows2012
    Windows2016
    Windows2019
    Windows2019se
    Windows7
    Windows8
    WindowsXP

